gem5/util/tlm/log
main.cc: In function ‘int sc_main(int, char**)’:
main.cc:327:5: error: ‘Target1’ was not declared in this scope
     Target1 *icache_0;                  
     ^
main.cc:327:14: error: ‘icache_0’ was not declared in this scope
     Target1 *icache_0;                  
              ^
main.cc:334:24: error: expected type-specifier before ‘Target1’
         icache_0 = new Target1("icache_0",
                        ^
main.cc:334:24: error: expected ‘;’ before ‘Target1’
main.cc:368:5: error: ‘Target2’ was not declared in this scope
     Target2 *icache_1;                  
     ^
main.cc:368:14: error: ‘icache_1’ was not declared in this scope
     Target2 *icache_1;                  
              ^
main.cc:375:24: error: expected type-specifier before ‘Target2’
         icache_1 = new Target2("icache_1",
                        ^
main.cc:375:24: error: expected ‘;’ before ‘Target2’
main.cc:408:5: error: ‘Target3’ was not declared in this scope
     Target3 *icache_2;                  
     ^
main.cc:408:14: error: ‘icache_2’ was not declared in this scope
     Target3 *icache_2;                  
              ^
main.cc:415:24: error: expected type-specifier before ‘Target3’
         icache_2 = new Target3("icache_2",
                        ^
main.cc:415:24: error: expected ‘;’ before ‘Target3’
main.cc:447:5: error: ‘Target4’ was not declared in this scope
     Target4 *icache_3;                  
     ^
main.cc:447:14: error: ‘icache_3’ was not declared in this scope
     Target4 *icache_3;                  
              ^
main.cc:454:24: error: expected type-specifier before ‘Target4’
         icache_3 = new Target4("icache_3",
                        ^
main.cc:454:24: error: expected ‘;’ before ‘Target4’
make: *** [main.o] Error 1
